fixed minor thigns

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -4210,6 +4210,16 @@
   year =      {2017},
 }
 
+@article{JMLR:v16:swaminathan15a,
+  author  = {A. Swaminathan and T. Joachims},
+  title   = {Batch Learning from Logged Bandit Feedback through Counterfactual Risk Minimization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2015},
+  volume  = {16},
+  number  = {},
+  pages   = {1731--1755},
+}
+
 @TECHREPORT{SCP16_TR,
   author =    {G. Swirszcz and W. M. Czarnecki and R. Pascanu},
   title =     {Local minima in training of deep networks},
