--- a/test_accuracy_paper/test_accuracy_intro.tex
+++ b/test_accuracy_paper/test_accuracy_intro.tex
@@ -37,7 +37,7 @@ Here, it would also be very helpful to be able to fine-tune large, pre-trained D
 
 To predict trends in the generalization accuracy of a series of DNN architectures, VC-like theories offer theoretical bounds on the generalization accuracy. 
 Practically, such capacity metrics can guide the
-theoretical development of new regularizers for traditional ML optimization problems (e.g., counterfactual expected risk minimization), but the bounds themselves are far too loose to be used directly. 
+theoretical development of new regularizers for traditional ML optimization problems (e.g., counterfactual expected risk minimization~\cite{JMLR:v16:swaminathan15a}), but the bounds themselves are far too loose to be used directly. 
 Moreover, since the early days of NN research, 
 it was known that 
 %%even Vapnik himself argued that his 
