--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -122,7 +122,7 @@ the Universal $\hat{\alpha}$ metric shows a near perfect linear relation across 
       Top 1 Test error versus
       average log Frobenius norm $\langle\log\Vert\mathbf{W}\Vert_{F}\rangle$ (in (\ref{fig:resnet_lognorms}))
       or
-      weighted average PL exponent $\hat{\alpha}$ (in (\ref{fig:resnet_alphahat})).
+      Universal, weighted average PL exponent $\hat{\alpha}$ (in (\ref{fig:resnet_alphahat})).
            }
    \label{fig:resnet}
 \end{figure*}
