--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -82,15 +82,17 @@ This established the approximate---and surprising---linear relation we want for 
 
 Here, we consider finite-size effects in Eqn.~(\ref{eqn:basic_relation}), both within and across HT Universality classes, i.e., for both VHT and MHT matrices.
 See Figure~\ref{fig:randW}, which  displays $\frac{\log\Vert\mathbf{W}\Vert^{2}_{F}}{\log\lambda^{max}}$ as a function of the fitted PL exponent $\alpha$, with varying sizes $N$ (with aspect ratio $Q=1$).
-Recall that $\alpha \approx \frac{1}{2}\mu+1$ for finite-sized VHT random matrices, while $\alpha = a\mu+b$ for finite-sized MHT random matrices, where $a,b$ depend strongly on the size of the matrix.  Thus, $\mu\in(0,2)$ for VHT matrices corresponds to $\alpha\in(1,2)$, while $\alpha \approx(2,3)$ or $\alpha \approx(2,4)$ for MHT matrices.
+Recall that $\alpha \approx \frac{1}{2}\mu+1$ for VHT random matrices \nred{(Eqn. XXX)}, while $\alpha = a\mu+b$ for MHT random matrices \nred{(Eqn. XXX)} )where $a,b$ strongly depends on $N$ and $M$.
+Thus, $\mu\in(0,2)$ for VHT matrices corresponds to $\alpha\in(1,2)$, while $\alpha \approx(2,5)$ for MHT matrices.
 %% $$
 %% \dfrac{\log\Vert\mathbf{W}\Vert^{2}_{F}}{\log\lambda^{max}}\;\;vs.\;\;(\alpha)  .
 %% $$
-The numerical results in Figure~\ref{fig:randW} show that as $\alpha$ increases:
+The numerical results in Figure~\ref{fig:randW} show that as $\alpha$ increases
 when $\alpha<2$, there exists a near-linear relation; and
 when $\alpha>2$, for $N,M$ large, the relation saturates, becoming constant, while for smaller $N,M$, there exists a near-linear relation, but with strong finite-size effects.
 These numerical results demonstrate that $ \log\Vert\mathbf{W}\Vert^{2}_{F}\approx\alpha\log\lambda^{max} $ works very well for VHT random matrices, for $\alpha<2$, and that it works moderately well for MHT matrices and even some WHT matrices.
-In particular, for MHT matrices, the finite-size regime in which it holds moderately well when $N,M\sim\mathcal{O}(100-1000)$, which is typical for modern DNNs. 
+In particular, for MHT matrices, in the finite-size regime, when $N,M\sim\mathcal{O}(100-1000)$, which is typical for modern DNNs, the PL-Norm relations holds, \emph{on average}. quite well. 
+\nred{Which is what we want in a practical engineering metric that can describe the average test accuracy.  }
 
 \begin{figure*}[!htb]
    \centering
@@ -140,8 +142,9 @@ In particular, for MHT matrices, the finite-size regime in which it holds modera
     \label{fig:relations}
 \end{figure*}
 
-Here, we show numerically that the qualitative form of Eqn.~(\ref{eqn:basic_relation}) holds more generally than the special case derived previously, including into the MHT Universality class, for both random and real data.
-To illustrate this, we generate a large number of HT random matrices $\mathbf{W}^{rand}(\mu)$, with varying sizes $N$ (with aspect ratio $Q=1$), drawn from a Pareto distribution of Eqn.~(\ref{eqn:ht_dstbn}), with exponents $\mu\in[0.5, 5]$.
+Here, we show, numerically, that Eqn.~(\ref{eqn:basic_relation}) holds qualitatively well and 
+ more generally than the special case derived previously, including into the MHT Universality class, for both random and real data.
+To illustrate this, we generate a large number of HT random matrices $\mathbf{W}^{rand}(\mu)$, with varying sizes $N$ (and $Q=1$), drawn from a Pareto distribution of Eqn.~(\ref{eqn:ht_dstbn}), with exponents $\mu\in[0.5, 5]$.
 We then fit the ESD of each $\mathbf{W}^{rand}(\mu)$ to a PL using the method of Clauset et al.~\cite{CSN09_powerlaw,ABP14} to obtain the empirical exponent $\alpha$.   
 Figure~\ref{fig:relation-rand} shows that there is a near-perfect relation between $ \alpha\log\lambda^{max}$ and $\log\Vert\mathbf{W}\Vert^{2}_{F} $.
 We also performed a similar PL fit for VGG11 weight matrices.
@@ -178,29 +181,29 @@ Figure~\ref{fig:fro-vgg11} displays these results, here as a function of $\alpha
 \begin{figure*}[!htb]
    \centering
    \subfigure[Random Pareto Matrices] {
-      \includegraphics[scale=0.25]{img/fro-rand.png} 
+      \includegraphics[scale=0.20]{img/fro-rand.png} 
       \label{fig:fro-rand}
    }
    \subfigure[Pre-trained VGG11 Weight Matrices]{
-      \includegraphics[scale=0.25]{img/fro-vgg11.png} 
+      \includegraphics[scale=0.20]{img/fro-vgg11.png} 
       \label{fig:fro-vgg11}
    }
    \caption{Dependence of Frobenius norm on PL exponents for random Pareto versus pre-trained DNN matrices.  }
    \label{fig:fnorm}
 \end{figure*}
 
-The properties of $\Vert\mathbf{W}\Vert^{2}_{F}$ for the random Pareto versus real/ron-random DNN weight matrices are quite different.
+The properties of $\Vert\mathbf{W}\Vert^{2}_{F}$ differ strikingly  for the random Pareto versus real/ron-random DNN weight matrices,
+and care must be taken when applying these Universality principles to strongly correlated systems.
 For a random Pareto matrix, $\mathbf{W}^{rand}(\mu)$, the Frobenius norm $\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$ 
 \emph{decreases with increasing exponent} $(\mu)$; and there is a modest finite-size effect.
 (In addition, as the tails of the ESD $\rho(\lambda)$ get heavier, the largest eigenvalue $\lambda^{max}$ of $\mathbf{X}$ scales with the largest element of $\mathbf{W}^{rand}(\mu)$.) 
-% \michael{$\alpha$ or $\mu$ here.}
-% \michael{Cite something or show this.}
 For the weight matrices of a pre-trained DNN, however, the Frobenius norm $\Vert\mathbf{W}\Vert^{2}_{F}$ \emph{increases with increasing exponent} $(\alpha)$, saturating at $\alpha\approx 3$.
 This happens because, due to the training process, the $\mathbf{W}$ matrices themselves are highly-correlated, and not random matrices with a single large, atypical element.
+\footnote{This is easily seen by simply randomizing the elements of a real DNN weight matrix, and computing the ESD again.}
 In spite of this, the ESD $\rho(\lambda)$ of these pre-trained correlations matrices $\mathbf{X}$ display Universal HT behavior~\cite{MM18_TR}; and, as shown in Figure~\ref{fig:relation-vgg11}, 
 Eqn.~(\ref{eqn:basic_relation}) is approximately satisfied, in the sense that 
 $\alpha\log\lambda^{max}$ is positively correlated with $\log\Vert\mathbf{W}\Vert^{2}_{F} $.
-This is one of the remarkable properties of Universality (and it shows why some care must be taken in applying these Universality principles).
+This is one of the remarkable properties of Mechanistic Universality.
 
 
 \section{Additional Empirical Results}
@@ -211,36 +214,23 @@ Here, we summarize some of those results.
 
 \paragraph{More Pre-trained Models.}
 
-Here are results for more pre-trained models.
-See
-Table~\ref{table:models_more}
-as well as 
-Figure~\ref{fig:models_more} 
-for details.
-XXX.  SOME COMMENTS.
+We present results for eleven more series of pre-trained DNN architectures,
+(See Table~\ref{table:models_still_more}), 
+eight of which show positive results, as with the VGG and  ResNet
+series (above), and three counterexample architectures..
 
-\begin{table}[!htb]
-\small
-\begin{center}
-\begin{tabular}{|p{1in}|c|c|c|c|c|c|c|}
-\hline
-Architecture 
- & Model
- & Test Accuracy \\
-\hline
-GoogLeNet & & \\
-\hline
-ResNeXt & & \\
-\hline
-SqueezeNet & & \\
-\hline
-\end{tabular}
-\end{center}
-\caption{Results for more models.
-         \michael{Charles, why is this split off from the next table.}
-        }
-\label{table:models_more}
-\end{table}
+The results that perform as expected are show in
+Figures~\ref{fig:models_more}, 
+~\ref{fig:still_more_1}, and \ref{fig:still_more_2}.
+For each set of models, our Universal metric $\hat{\alpha}$
+is smaller when, for the most part, the reported (Top 1)
+test accuracy is larger.  This holds approximately
+true for the three of the four DenseNet models, with
+densenet169 as an outlier.  In fact, this is the only
+outlier out of 26 DNN models in these eight architectures.,
+For all of the other pre-trained DNNs,  smaller
+$\hat{\alpha}$ corresponds with smaller test error
+and larger test accuracy, as predicted by our theory.
 
 \begin{figure*}[!htb]
    \centering
@@ -258,21 +248,12 @@ SqueezeNet & & \\
       Models.
       Test Accuracy versus
       $\hat{\alpha}$.
-      \michael{Charles, fix to be consistent with other figures.}
            }
    \label{fig:models_more}
 \end{figure*}
 
 
-\paragraph{Still More Pre-trained Models.}
 
-Here are results for still more pre-trained models.
-See
-Table~\ref{table:models_still_more}
-as well as
-Figures~\ref{fig:still_more_1} and \ref{fig:still_more_2}
-for details.
-XXX.  SOME COMMENTS.
 
 
 \begin{table}[!htb]
@@ -282,23 +263,26 @@ XXX.  SOME COMMENTS.
 \hline
 Architecture 
  & Model
- & Top 1 Error \\
+ & Top 1 Error & $\hat{\alpha} $\\
  \hline
  DenseNet & densenet121 & 25.57 & \\
 & densenet161 & 22.86 & \\
 & densenet169 & 24.4 & \\
-& densenet201 & 23.1 & \\\hline
+& densenet201 & 23.1 & \\
+\hline
+SqueezeNet & squeezenet1\_0 &  & \\
+& squeezenet1\_1 &  & \\
+ \hline
+ CondenseNet & condensenet74\_c4\_g4  &  & \\
+ & condensenet74\_c8\_g8 &  & \\
+\hline
 DPN & dpn68 & 24.17 & \\
 & dpn98 & 20.81 & \\
 & dpn131 & 20.54 & \\
 \hline
-MeNet & menet108\_8x1\_g3 & 43.92 & \\
-& menet128\_8x1\_g4 & 43.95 & \\
-& menet228\_12x1\_g3 & 33.57 & \\
-& menet256\_12x1\_g4 & 33.41 & \\
-& menet348\_12x1\_g3 & 30.1 & \\
-& menet352\_12x1\_g8 & 33.31 & \\
-& menet456\_24x1\_g3 & 28.4 & \\
+ShuffleNet & shufflenetv2\_wd2 &  & \\
+& shufflenetv2\_w1 &  & \\
+
 \hline
 MobileNet & mobilenet\_wd4 & 46.26 & \\
 & mobilenet\_wd2 & 36.3 & \\
@@ -310,10 +294,6 @@ MobileNetV2 & mobilenetv2\_wd4 & 49.72 & \\
 & mobilenetv2\_w3d4 & 31.89 & \\
 & mobilenetv2\_w1 & 29.31 & \\
 \hline
-FDMobileNet & fdmobilenet\_wd4 & 55.77 & \\
-& fdmobilenet\_wd2 & 43.85 & \\
-& fdmobilenet\_w1 & 34.7 & \\
-\hline
 SE-ResNet & seresnet50 & 22.47 & \\
 & seresnet101 & 21.88 & \\
 & seresnet152 & 21.48 & \\
@@ -324,14 +304,31 @@ SE-ResNeXt & seresnext50\_32x4d & 21.0 & \\
 ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
 & shufflenetv2\_w1 & 34.39 & \\
 \hline
+Counterexamples 
+ & 
+ & & \\
+\hline
+ResNeXt & resnext101\_32x4d &  & \\
+& resnext101\_64x4d &  & \\
+\hline
+MeNet & menet108\_8x1\_g3 & 43.92 & \\
+& menet128\_8x1\_g4 & 43.95 & \\
+& menet228\_12x1\_g3 & 33.57 & \\
+& menet256\_12x1\_g4 & 33.41 & \\
+& menet348\_12x1\_g3 & 30.1 & \\
+& menet352\_12x1\_g8 & 33.31 & \\
+& menet456\_24x1\_g3 & 28.4 & \\
+\hline
+FDMobileNet & fdmobilenet\_wd4 & 55.77 & \\
+& fdmobilenet\_wd2 & 43.85 & \\
+& fdmobilenet\_w1 & 34.7 & \\
+\hline
 \end{tabular}
 \end{center}
-\caption{Results for still more models.
-         \michael{Charles, why is this split off from previous table.}
-         \michael{Charles, why is CondenseNet missing.}
-         \michael{Charles, why Test Accuracy for others and Top 1 Error here.}
+\caption{Results for more pre-trained DN models.  Models provided in 
+the OSMR Sandbox, implemented in pytorch.
         }
-\label{table:models_still_more}
+\label{table:models_more}
 \end{table}
 
 
@@ -355,7 +352,6 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
       Models.
       Top 1 Test error versus
       $\hat{\alpha}$.
-      \michael{Charles, fix to be consistent with other figures.}
            }
    \label{fig:still_more_1}
 \end{figure*}
@@ -381,7 +377,6 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
       Models.
       Top 1 Test error versus
       $\hat{\alpha}$.
-      \michael{Charles, fix to be consistent with other figures.}
            }
    \label{fig:still_more_2}
 \end{figure*}
@@ -394,8 +389,15 @@ Figure~\ref{fig:counter-examples}
 as well as 
 Table~\ref{table:models_still_more}
 for details on the counterexamples.
-XXX.  COMMENTS.
-
+These are ResNeXt, MeNet, and FDMobileNet.
+For ResNeXt, there are only two models, and the $\hat{\alpha}$ is larger
+for the less accurate model. For MeNet, there are seven different models,
+and there is no discernible pattern in the data.  Finally, for FDMobileNet,
+there are three different pre-trained models,  and, again, the 
+ $\hat{\alpha}$ is larger for the less accurate models.
+ We have not looked in detail at these results and simply
+ present them for completeness.
+ 
 \begin{figure*}[!htb]
    \centering
    \subfigure[ResNeXt]{
@@ -417,7 +419,6 @@ XXX.  COMMENTS.
       that provide counterexamples to our main trends.
       Top 1 Test error versus
       $\hat{\alpha}$.
-      \michael{Charles, fix to be consistent with other figures.}
            }
    \label{fig:counter-examples}
 \end{figure*}
@@ -443,7 +444,6 @@ We should mention two higher-level comments.
 %
 First, 
 one of the main insights of our approach is to highlight the importance of what might seem to be a technical issue to ignore, but which in our experience is \emph{extremely} important: the scaling or normalization for weight matrices used in the DNN, and how this relates to the difference between finite-size versus asymptotic effects.
-\michael{Modify slightly since we don't go into as much detail about our scaling problems, so modify these comments.}
 This scaling issue has been highlighted perhaps most recently by Bartlett et al.~\cite{BFT17_TR} and Liao et al.~\cite{LMBx18_TR}.
 The latter were interested in showing that classical generalization bounds can be tight---when normalization is performed appropriately.
 Our approach complements theirs; but, to our knowledge, our approach is the first to highlight the connection with finite-size effects.
@@ -453,7 +453,7 @@ Second,
 we are taking a 
 very %somewhat 
 non-standard approach (at least for the DNN and ML communities) to address our main question.
-We didn't train/retrain lots and lots of (typically rather small) models, analyzing training/test curves, trying to glean from them bits of insight that might then extrapolate to more realistic models.
+W did not train/retrain lots and lots of (typically rather small) models, analyzing training/test curves, trying to glean from them bits of insight that might then extrapolate to more realistic models.
 Instead, we took advantage of the fact that there already exist many (typically rather large) publicly-available pre-trained models, and we analyzed the properties of these models.
 That is, we viewed these publicly-available pre-trained models as artifacts of the world that achieve state-of-the-art performance in computer vision, NLP, and related applications; and we attempted to understand why.
 To do so, we analyzed the empirical (spectral) properties of these models; 
