--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -265,6 +265,8 @@ Architecture
  & Model
  & Top 1 Error & $\hat{\alpha} $\\
  \hline
+ Working Examples & & & \\
+ \hline
  DenseNet & densenet121 & 25.57 & \\
 & densenet161 & 22.86 & \\
 & densenet169 & 24.4 & \\
@@ -280,9 +282,8 @@ DPN & dpn68 & 24.17 & \\
 & dpn98 & 20.81 & \\
 & dpn131 & 20.54 & \\
 \hline
-ShuffleNet & shufflenetv2\_wd2 &  & \\
-& shufflenetv2\_w1 &  & \\
-
+ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
+& shufflenetv2\_w1 & 34.39 & \\
 \hline
 MobileNet & mobilenet\_wd4 & 46.26 & \\
 & mobilenet\_wd2 & 36.3 & \\
@@ -301,12 +302,7 @@ SE-ResNet & seresnet50 & 22.47 & \\
 SE-ResNeXt & seresnext50\_32x4d & 21.0 & \\
 & seresnext101\_32x4d & 19.96 & \\
 \hline
-ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
-& shufflenetv2\_w1 & 34.39 & \\
-\hline
-Counterexamples 
- & 
- & & \\
+Counterexamples & & &  \\
 \hline
 ResNeXt & resnext101\_32x4d &  & \\
 & resnext101\_64x4d &  & \\
@@ -325,9 +321,8 @@ FDMobileNet & fdmobilenet\_wd4 & 55.77 & \\
 \hline
 \end{tabular}
 \end{center}
-\caption{Results for more pre-trained DN models.  Models provided in 
-the OSMR Sandbox, implemented in pytorch.
-        }
+\caption{Results for more pre-trained DNN models.  Models provided in 
+the OSMR Sandbox, implemented in pytorch.  }
 \label{table:models_more}
 \end{table}
 
