test accuracy everywhere

--- a/PowerLawExample-with-diff-Normalizations.ipynb
+++ b/PowerLawExample-with-diff-Normalizations.ipynb
@@ -299,6 +299,13 @@
       "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n"
      ]
     }
