updated diff norms

--- a/PowerLawExample-with-diff-Normalizations.ipynb
+++ b/PowerLawExample-with-diff-Normalizations.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-09T22:54:39.475194Z",
@@ -306,7 +306,18 @@
       "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
+      "Calculating best minimal value for power law fit\n",
       "Calculating best minimal value for power law fit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
